--- a/app/views/comments/new.html.erb
+++ b/app/views/comments/new.html.erb
@@ -1,4 +1,4 @@
 <%= form_for [@post, @comment] do |c| %>
   <%= c.text_field :description %>
-  <%= c.submit "Crear" %>
+  <a class="btn btn-primary"><%= c.submit "Crear" %></a>
 <% end %>
