--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,20 +4,39 @@
     <title>Post2App</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
   </head>
-
   <body>
     <div>
       <% if signed_in? %>
-        <%= link_to "Salir", destroy_user_session_path, method: :delete %>
+        <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link"><%= link_to "Salir", destroy_user_session_path, method: :delete %></a>
+            </li>
+          </ul>
+        </nav>
       <% else %>
-        <%= link_to "Registrarse", new_user_registration_path %>
-        <%= link_to "Ingresar", new_user_session_path %>
+        <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link"><%= link_to "Registrarse", new_user_registration_path %></a>
+            </li> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
+            <li class="nav-item">
+              <a class="nav-link"><%= link_to "Ingresar", new_user_session_path %></a>
+            </li>
+          </ul>
+        </nav>
       <% end %>
     </div>
-    <%= yield %>
+    <div class="container text-center">
+      <%= yield %>
+    </div>
   </body>
 </html>
