--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -8,6 +8,8 @@
   </head>
 
   <body>
-    <%= yield %>
+    <div class="container text-center">
+      <%= yield %>
+    </div>
   </body>
 </html>
