--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Listado de Posts:</h1>
 <p><td><%= link_to "Crear Post", new_post_path%></p>
-<table border="1">
+<table class="table">
   <tr>
     <th>Id</th>
     <th>Title</th>
